# kotanima_server

./: .gitignore  NOTES.md  README.md  manage.py  pyproject.toml
kotanima_server/: asgi.py  settings.py  urls.py  wsgi.py
my_app/: admin.py  models.py  serializers.py  urls.py  views.py
my_app/migrations/: 0001_initial.py  0002_auto_20210417_1252.py  0003_auto_20210417_1750.py  0004_auto_20210417_1751.py  0005_redditpost_mal_id.py  0006_auto_20210418_1400.py  0007_auto_20210718_1557.py
